[package]
name = "shaders"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = { version = "1.13.1", features = [ "derive" ] }
cfg-if = "1.0.0"
env_logger = "0.10.0"
instant = "0.1.12"
log = "0.4.19"
nalgebra = "0.32.3"
pollster = "0.3.0"
wgpu = "0.16.2"
winit = "0.28.6"
